--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,12 @@
     <artifactId>mydocker</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <modules>
+        <module>postgreJavaAppDocker</module>
+        <module>postgreWithVolume</module>
+        <module>oracleDb</module>
+        <module>mySql</module>
+        <module>mssql</module>
+    </modules>
 
 </project>
