--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
 
     <groupId>ru.litvinov.mydocker</groupId>
     <artifactId>mydocker</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <modules>
@@ -14,6 +15,7 @@
         <module>oracleDb</module>
         <module>mySql</module>
         <module>mssql</module>
+        <module>SpringApp</module>
     </modules>
 
 </project>
