--- a/SpringApp/Dockerfile
+++ b/SpringApp/Dockerfile
@@ -2,8 +2,12 @@ FROM openjdk:8-jdk-alpine
 #за основу взята 8 версия джавы
 #ARG JAR_FILE=target/*.jar
 #COPY ${JAR_FILE} app.jar
+
+EXPOSE 8080
+
 COPY target/*.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
 
 #запуск
-#docker run --rm -p 8080:8080 springapp1
+#docker build -t springapp1 .
+#docker run -d -p 8080:8080 springapp1
