--- a/ubuntu/Dockerfile_ubuntu
+++ b/ubuntu/Dockerfile_ubuntu
@@ -2,4 +2,5 @@
 FROM ubuntu:18.04
  
 # Install updates to base image
-RUN apt-get update -y && apt-get install -y && apt-get install rpm -y && apt install net-tools -y && apt-get install sudo -y
+RUN apt-get update -y && apt-get install -y && apt-get install rpm -y && apt install net-tools -y && apt-get install sudo -y \
+&& apt-get install curl -y
