--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>mySql</module>
         <module>mssql</module>
         <module>SpringApp</module>
+        <module>JavaCertImport</module>
     </modules>
 
 </project>
